--- a/roles/letsencrypt/tasks/issue-certs-cleanup-local.yml
+++ b/roles/letsencrypt/tasks/issue-certs-cleanup-local.yml
@@ -1,4 +1,8 @@
 ---
 - name: "Cleaning up state and challenge files"
-  local_action: shell rm -rf "scratch/state-{{ domains[0] }}.json" "scratch/challenges-{{ domains[0] }}"
+  local_action: file path=scratch/state-{{ domains[0] }}.json state=absent
+  run_once: True
+
+- name: "Cleaning up state and challenge files"
+  local_action: file path=scratch/challenges-{{ domains[0] }} state=absent
   run_once: True
