--- a/roles/letsencrypt/tasks/issue-certs-cleanup.yml
+++ b/roles/letsencrypt/tasks/issue-certs-cleanup.yml
@@ -4,4 +4,4 @@ This script must be adjusted to your server configuration!
 Example:
 
 - name: "Cleaning up challenge files for domains {{ ', '.join(domains) }}"
-  shell: rm -f {{ server_location }}*
+  file: path={{ server_location }} state=absent
