--- a/roles/letsencrypt/tasks/main.yml
+++ b/roles/letsencrypt/tasks/main.yml
@@ -1,38 +1,127 @@
 ---
-- include: create-key.yml
+- block:
+  - name: "Creating private key for domains {{ ', '.join(domains) }}"
+    local_action: command python {{ role_path }}/code/acme_compact.py gen-key --key "{{ keys_path }}{{ key_name }}.key" --algorithm {{ algorithm }} --key-length {{ key_length }}
+    run_once: True
   tags:
   - issue-tls-certs-newkey
   - create-tls-keys
-- include: create-csr.yml
+
+- block:
+  - name: "Creating CSR for domains {{ ', '.join(domains) }}"
+    local_action: command python {{ role_path }}/code/acme_compact.py gen-csr --key "{{ keys_path }}{{ key_name }}.key" --csr "{{ keys_path }}{{ key_name }}.csr" --domains "{{ ','.join(domains) }}" {% if ocsp_must_staple %}--must-staple{% endif %}
+    run_once: True
   tags:
   - issue-tls-certs-newkey
   - issue-tls-certs
   - create-tls-keys
   - create-tls-csr
-- include: get-chain.yml
+
+- block:
+  - name: "Get root certificate for domains {{ ', '.join(domains) }}"
+    local_action:
+      module: get_url
+      url: "{{ root_certificate }}"
+      dest: "{{ keys_path }}{{ key_name }}-root.pem"
+    run_once: True
+
+  - name: "Get intermediate certificate for domains {{ ', '.join(domains) }}"
+    local_action:
+      module: get_url
+      url: "{{ intermediate_certificate }}"
+      dest: "{{ keys_path }}{{ key_name }}-chain.pem"
+    run_once: True
+
+  - name: "Form root chain for domains {{ ', '.join(domains) }}"
+    local_action:
+      module: copy
+      dest: "{{ keys_path }}{{ key_name }}-rootchain.pem"
+      content: "{{ lookup('file', keys_path ~ key_name ~ '-root.pem') }}\n{{ lookup('file', keys_path ~ key_name ~ '-chain.pem') }}\n"
+    run_once: True
   tags:
   - issue-tls-certs-newkey
   - issue-tls-certs
   - get-tls-chain
-- include: issue-certs-prepare.yml
+
+- name: "Preparing challenges for domains {{ ', '.join(domains) }}"
+  local_action:
+    module: letsencrypt
+    account_key: "{{ acme_account }}"
+    csr: "{{ keys_path }}{{ key_name }}.csr"
+    dest: "{{ keys_path }}{{ key_name }}.pem"
+    account_email: "{{ acme_email }}"
+    agreement: "{{ agreement }}"
+    challenge: "{{ challenge }}"
+    acme_directory: "{{ acme_directory }}"
+    remaining_days: 91
+  register: lets_encrypt_challenge
   tags:
   - issue-tls-certs-newkey
   - issue-tls-certs
-- include: issue-certs-copy.yml
+
+- block:
+  # Create up challenge files directory on server. Customize this for your server's specific setup!
+  - name: Creating challenge destination directory
+    file:
+      dest: "{{ server_location }}"
+      state: directory
+      owner: root
+      group: http
+      mode: "0750"
+    when: "challenge == 'http-01'"
+
+  # Create challenge files on server. Customize this for your server's specific setup!
+  - name: Copying challenge files for domains {{ ', '.join(domains) }}"
+    copy:
+      dest: "{{ server_location }}/{{ item.value[challenge].resource[('.well-known/acme-challenge/'|length):] }}"
+      content: "{{ item.value[challenge].resource_value }}"
+      owner: root
+      group: http
+      mode: "0640"
+    when: "challenge == 'http-01'"
+    with_dict: "{{ lets_encrypt_challenge.challenge_data }}"
+
+  - name: "Getting certificates for domains {{ ', '.join(domains) }}"
+    local_action:
+      module: letsencrypt
+      account_key: "{{ acme_account }}"
+      csr: "{{ keys_path }}{{ key_name }}.csr"
+      dest: "{{ keys_path }}{{ key_name }}.pem"
+      account_email: "{{ acme_email }}"
+      agreement: "{{ agreement }}"
+      challenge: "{{ challenge }}"
+      acme_directory: "{{ acme_directory }}"
+      remaining_days: 91
+      data: "{{ lets_encrypt_challenge }}"
+
+  - name: "Creating chained certificate for domains {{ ', '.join(domains) }}"
+    local_action:
+      module: copy
+      dest: "{{ keys_path }}{{ key_name }}-fullchain.pem"
+      content: "{{ lookup('file', keys_path ~ key_name ~ '.pem') }}\n{{ lookup('file', keys_path ~ key_name ~ '-chain.pem') }}\n"
+    run_once: True
+
+  always:
+  # Clean up challenge files on server. Customize this for your server's specific setup!
+  - name: "Cleaning up challenge files for domains {{ ', '.join(domains) }}"
+    file:
+      path: "{{ server_location }}/{{ item.value[challenge].resource[('.well-known/acme-challenge/'|length):] }}"
+      state: absent
+    when: "challenge == 'http-01'"
+    with_dict: "{{ lets_encrypt_challenge.get('challenge_data', {}) }}"
+
   tags:
   - issue-tls-certs-newkey
   - issue-tls-certs
-- include: issue-certs-finish.yml
+  when: lets_encrypt_challenge|changed
+
+- name: "Verifying certificate for domains {{ ', '.join(domains) }}"
+  local_action:
+    module: command
+    _raw_params: openssl verify -CAfile "{{ keys_path }}{{ key_name }}-root.pem" -untrusted "{{ keys_path }}{{ key_name }}-chain.pem" "{{ keys_path }}{{ key_name }}.pem"
+  changed_when: False
+  run_once: True
   tags:
   - issue-tls-certs-newkey
   - issue-tls-certs
-- include: issue-certs-cleanup-local.yml
-  tags:
-  - issue-tls-certs-newkey
-  - issue-tls-certs
-  - tls-cleanup
-- include: issue-certs-cleanup.yml
-  tags:
-  - issue-tls-certs-newkey
-  - issue-tls-certs
-  - tls-cleanup
+  - verify-tls-certs
