--- a/roles/letsencrypt/defaults/main.yml
+++ b/roles/letsencrypt/defaults/main.yml
@@ -10,3 +10,9 @@ acme_directory: https://acme-v01.api.letsencrypt.org/directory
 challenge: http-01
 root_certificate: https://letsencrypt.org/certs/isrgrootx1.pem
 intermediate_certificate: https://letsencrypt.org/certs/lets-encrypt-x3-cross-signed.pem
+
+# For http challenges:
+http_challenge_user: root
+http_challenge_group: http
+http_challenge_folder_mode: "0750"
+http_challenge_file_mode: "0640"
