--- a/roles/letsencrypt/tasks/dns-route53-cleanup.yml
+++ b/roles/letsencrypt/tasks/dns-route53-cleanup.yml
@@ -5,7 +5,7 @@
     module: route53
     state: absent
     zone: "{{ item.key | regex_replace('^(?:.*\\.|)([^.]+\\.[^.]+)$', '\\1') }}"
-    record: "{{ item.value[challenge].resource }}.{{ item.key }}"
+    record: "{{ item.value[challenge].resource }}.{{ item.key | regex_replace('^\\*\\.', '') }}"
     type: TXT
     ttl: 60
     value: '"{{ item.value[challenge].resource_value }}"'
