--- a/roles/letsencrypt/tasks/dns-hosttech-cleanup.yml
+++ b/roles/letsencrypt/tasks/dns-hosttech-cleanup.yml
@@ -14,3 +14,6 @@
     hosttech_password: "{{ hosttech_password }}"
   run_once: True
   with_dict: "{{ lets_encrypt_challenge.get('challenge_data', {}) }}"
+  tags:
+  - issue-tls-certs-newkey
+  - issue-tls-certs
