--- a/tasks/http-cleanup.yml
+++ b/tasks/http-cleanup.yml
@@ -5,6 +5,7 @@
     path: "{{ server_location }}/{{ item.value[challenge].resource[('.well-known/acme-challenge/'|length):] }}"
     state: absent
   with_dict: "{{ lets_encrypt_challenge.get('challenge_data', {}) }}"
+  become: "{{ http_become }}"
   tags:
   - issue-tls-certs-newkey
   - issue-tls-certs
