--- a/tasks/http-create.yml
+++ b/tasks/http-create.yml
@@ -7,6 +7,7 @@
     owner: "{{ http_challenge_user }}"
     group: "{{ http_challenge_group }}"
     mode: "{{ http_challenge_folder_mode }}"
+  become: "{{ http_become }}"
   tags:
   - issue-tls-certs-newkey
   - issue-tls-certs
@@ -20,6 +21,7 @@
     group: "{{ http_challenge_group }}"
     mode: "{{ http_challenge_file_mode }}"
   with_dict: "{{ lets_encrypt_challenge.challenge_data }}"
+  become: "{{ http_become }}"
   tags:
   - issue-tls-certs-newkey
   - issue-tls-certs
