--- a/tasks/dns-route53-cleanup.yml
+++ b/tasks/dns-route53-cleanup.yml
@@ -8,7 +8,7 @@
     record: "{{ item.key }}"
     type: TXT
     ttl: 60
-    value: "{{ item.value | map('regex_replace', '^(.*)$', '\'\\1\'' ) | list }}"
+    value: "{{ item.value | map('regex_replace', '^(.*)$', '\"\\1\"' ) | list }}"
     overwrite: true
     aws_access_key: "{{ aws_access_key }}"
     aws_secret_key: "{{ aws_secret_key }}"
