--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,6 +3,7 @@
   assert:
     that: "(ansible_version.major, ansible_version.minor) >= (2, 5)"
     msg: "This version of the letsencrypt role must be used with Ansible 2.5 or later."
+  run_once: True
   tags:
   - issue-tls-certs-newkey
   - issue-tls-certs
@@ -13,6 +14,7 @@
   assert:
     that: "challenge != 'dns-01' or dns_provider is not undefined"
     msg: "dns_provider must be defined for dns-01 DNS challenge"
+  run_once: True
   tags:
   - issue-tls-certs-newkey
   - issue-tls-certs
@@ -68,6 +70,7 @@
   always:
   - debug:
       msg: "account URI: {{ lets_encrypt_challenge.get('account_uri') }}; order URI: {{ lets_encrypt_challenge.get('order_uri') }}"
+    run_once: True
 
   tags:
   - issue-tls-certs-newkey
