--- a/tasks/dns-hosttech-cleanup.yml
+++ b/tasks/dns-hosttech-cleanup.yml
@@ -2,7 +2,7 @@
 # Clean up DNS challenges for DNS provider HostTech
 - name: Cleaning up challenge DNS entries for domains {{ ', '.join(domains) }} via HostTech API
   local_action:
-    module: hosttech_dns
+    module: hosttech_dns_record
     state: absent
     zone: "{{ item.key | regex_replace('^(?:.*\\.|)([^.]+\\.[^.]+)$', '\\1') }}"
     record: "{{ item.key }}"
