--- a/tasks/dns-hosttech-create.yml
+++ b/tasks/dns-hosttech-create.yml
@@ -2,7 +2,7 @@
 # Create DNS challenges for DNS provider HostTech
 - name: Creating challenge DNS entries for domains {{ ', '.join(domains) }} via HostTech API
   local_action:
-    module: hosttech_dns
+    module: hosttech_dns_record
     state: present
     zone: "{{ item.key | regex_replace('^(?:.*\\.|)([^.]+\\.[^.]+)$', '\\1') }}"
     record: "{{ item.key }}"
