--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,7 +2,7 @@
 - name: Ansible version check
   assert:
     that: "ansible_version | version_compare(2.5.1, '>=')"
-    msg: "This version of the letsencrypt role must be used with Ansible 2.5.1 or later."
+    msg: "This version of the acme-certificate role must be used with Ansible 2.5.1 or later."
   run_once: True
   tags:
   - issue-tls-certs-newkey
