--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,7 +1,7 @@
 galaxy_info:
   author: Felix Fontein
   description: >
-    Wrapper of Ansible's included letsencrypt module, whose aim is that almost no code
+    Wrapper of Ansible's included acme_certificate module, whose aim is that almost no code
     is executed on the webserver. Requires openssl and Python installed locally and
     available on executable path.
 
