Improving deactivate_authz support. Adding support for modify_account.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -27,3 +27,5 @@ http_challenge_user: root
 http_challenge_group: http
 http_challenge_folder_mode: "0750"
 http_challenge_file_mode: "0640"
+deactivate_authzs: true
+modify_account: true
