--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Ansible version check
   assert:
-    that: "ansible_version.string | version_compare('2.6.0', '>=')"
+    that: "ansible_version.string is version('2.6.0', '>=')"
     msg: "This version of the acme-certificate role must be used with Ansible 2.6.0 or later."
   run_once: True
   tags:
