--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,9 +3,9 @@ key_length: 4096
 key_name: "{{ domains[0].replace('*', '_') }}"
 keys_path: "keys/"
 keys_old_path: "keys/old/"
-keys_old_store: false
-keys_old_prepend_timestamp: false
-ocsp_must_staple: false
+keys_old_store: no
+keys_old_prepend_timestamp: no
+ocsp_must_staple: no
 terms_agreed: true
 acme_directory: https://acme-v02.api.letsencrypt.org/directory
 acme_version: 2
